--- a/Forge.Web/Styles/_colors.scss
+++ b/Forge.Web/Styles/_colors.scss
@@ -58,7 +58,7 @@ $color-action-20: mix($color-action, white, 50%);
 $color-action-10: mix($color-action, white, 30%);
 
 // Link -------------------------------------------
-$color-link: #7CA1A8;
+$color-link: #70aab5;
 $color-link-90: mix($color-link, black, 45%);
 $color-link-80: mix($color-link, black, 50%);
 $color-link-70: mix($color-link, black, 80%);
@@ -69,7 +69,7 @@ $color-link-30: mix($color-link, white, 80%);
 $color-link-20: mix($color-link, white, 50%);
 $color-link-10: mix($color-link, white, 30%);
 
-$color-red: #cc4949;
+$color-red: #d47373;
 
 
 // Font Colors --------------------------------------
