--- a/Forge.Web/Styles/Components/_dialogs.scss
+++ b/Forge.Web/Styles/Components/_dialogs.scss
@@ -6,7 +6,7 @@
     left: -10px;
     right: -10px;
     bottom: -10px;
-    z-index: 100;
+    z-index: 1000;
     cursor: default;
 
     .dialog__container{
@@ -21,7 +21,7 @@
         transform: translateX(-50%);
         min-width: 400px;
         background: $color-primary-10;
-        border:1px solid $color-primary-60;
+        //border:1px solid $color-primary-60;
         z-index: 100;
         @include soft-shadow();
     }
