--- a/Forge.Web/Styles/site.css
+++ b/Forge.Web/Styles/site.css
@@ -53,7 +53,7 @@ table {
   top: 0;
   left: 0;
   right: 0;
-  background-color: #3b4244;
+  background-color: #383e40;
   background-image: repeating-linear-gradient(45deg, transparent, transparent 15px, rgba(22, 25, 26, 0.2) 15px, rgba(22, 25, 26, 0.2) 30px), linear-gradient(90deg, #252a2b, #5c6466, #252a2b);
   background-size: 200% 200%;
   -webkit-animation: bganimate 20s linear infinite;
@@ -120,7 +120,7 @@ table {
   text-align: left; }
 
 .section--secondary {
-  background-color: #434b4d;
+  background-color: #3f4748;
   background-image: url(../Content/Images/cubes.png); }
 
 .section--summary {
@@ -128,7 +128,7 @@ table {
   color: #f8f8f8; }
   .section--summary h1 {
     color: white;
-    text-shadow: 2px 2px #3b4244; }
+    text-shadow: 2px 2px #383e40; }
 
 .no-results {
   text-align: center;
@@ -148,7 +148,7 @@ table {
     text-align: center; }
   .panel.panel--clickable:hover {
     background: #c9cbcc;
-    border-color: #434b4d; }
+    border-color: #3f4748; }
   .panel h4 {
     margin: -10px;
     margin-bottom: 20px;
@@ -324,13 +324,8 @@ b {
   height: 55px;
   z-index: 1000;
   font-size: 14px;
-  background-color: #4a5355;
-  border-bottom: 1px solid #5c6466;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); }
-  #nav.sticky {
-    background-color: #6f6f6f; }
+  background-color: #3f4748;
+  border-bottom: 1px solid #5c6466; }
   #nav > .container {
     height: 55px; }
   #nav .nav-group {
@@ -338,16 +333,18 @@ b {
     #nav .nav-group#nav-site {
       text-align: left; }
       #nav .nav-group#nav-site .arrow {
-        left: 30px; }
+        left: 15px; }
+      #nav .nav-group#nav-site ul {
+        left: 10px; }
     #nav .nav-group#nav-account {
       text-align: right; }
       #nav .nav-group#nav-account .arrow {
-        right: 30px; }
+        right: 15px; }
       #nav .nav-group#nav-account ul {
-        right: 0; }
+        right: 10px; }
     #nav .nav-group .toggle {
       display: inline-block;
-      color: #eeeeee;
+      color: #c9cbcc;
       cursor: pointer;
       font-size: 24px;
       padding: 0 15px;
@@ -360,46 +357,63 @@ b {
       #nav .nav-group .toggle:hover, #nav .nav-group .toggle.t-open {
         color: white; }
       #nav .nav-group .toggle.nav__menu {
-        float: left;
-        /*&:after{
-                    content: "\e871";
-                }*/ }
+        float: left; }
       #nav .nav-group .toggle.nav__user {
         float: right; }
     #nav .nav-group ul {
       position: absolute;
+      z-index: 10;
       display: none;
-      width: 100%;
+      width: calc(50% - 10px);
       white-space: nowrap;
-      background-color: #8dbbc4;
-      top: 55px; }
+      background-color: #4a5355;
+      top: 54px;
+      border: 1px solid #5c6466;
+      border-top: none; }
       #nav .nav-group ul.open {
         display: block; }
       #nav .nav-group ul .arrow {
         position: absolute;
-        top: -8px;
+        top: -12px;
         width: 0;
         height: 0;
-        border-left: 8px solid transparent;
-        border-right: 8px solid transparent;
-        border-bottom: 8px solid #8dbbc4; }
+        border-left: 12px solid transparent;
+        border-right: 12px solid transparent;
+        border-bottom: 12px solid #4a5355; }
       #nav .nav-group ul li {
         display: block;
-        height: 40px;
-        line-height: 40px;
-        width: 100%;
-        border-bottom: 1px solid #b8d5da; }
-        #nav .nav-group ul li:last-child {
-          border: none; }
+        width: 100%; }
         #nav .nav-group ul li a {
           display: inline-block;
           height: 100%;
           width: 100%;
-          line-height: 1;
-          padding: 0 15px;
-          color: #d4e6e9; }
+          padding: 10px 15px;
+          color: rgba(255, 255, 255, 0.7);
+          text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2); }
           #nav .nav-group ul li a:hover {
             color: white; }
+
+.nav__location {
+  position: fixed;
+  z-index: 11;
+  top: 0;
+  left: 50%;
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  height: 55px;
+  line-height: 55px; }
+  .nav__location .nav__text span:nth-child(2) {
+    font-size: 12px;
+    color: #c9cbcc;
+    margin-top: 5px;
+    margin-left: 10px;
+    text-transform: uppercase; }
 
 @media (min-width: 720px) {
   nav {
@@ -524,28 +538,28 @@ button,
   min-width: 75px;
   overflow: hidden;
   color: #f8f8f8;
-  background: #3b4244;
-  background-image: -moz-linear-gradient(top, #4a5355 0, #434b4d 100%);
-  background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #4a5355), color-stop(100%, #434b4d));
-  background-image: -webkit-linear-gradient(top, #4a5355 0, #434b4d 100%);
-  background-image: -o-linear-gradient(top, #4a5355 0, #434b4d 100%);
-  background-image: -ms-linear-gradient(top, #4a5355 0, #434b4d 100%);
-  background-image: linear-gradient(to bottombottom, #4a5355 0, #434b4d 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a5355', endColorstr='#434b4d',GradientType=0 );
+  background: #383e40;
+  background-image: -moz-linear-gradient(top, #4a5355 0, #3f4748 100%);
+  background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #4a5355), color-stop(100%, #3f4748));
+  background-image: -webkit-linear-gradient(top, #4a5355 0, #3f4748 100%);
+  background-image: -o-linear-gradient(top, #4a5355 0, #3f4748 100%);
+  background-image: -ms-linear-gradient(top, #4a5355 0, #3f4748 100%);
+  background-image: linear-gradient(to bottombottom, #4a5355 0, #3f4748 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a5355', endColorstr='#3f4748',GradientType=0 );
   border: none;
   border-radius: 3px; }
   button:hover,
   .button:hover {
-    background-image: -moz-linear-gradient(top, #6e7577 0, #434b4d 100%);
-    background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #6e7577), color-stop(100%, #434b4d));
-    background-image: -webkit-linear-gradient(top, #6e7577 0, #434b4d 100%);
-    background-image: -o-linear-gradient(top, #6e7577 0, #434b4d 100%);
-    background-image: -ms-linear-gradient(top, #6e7577 0, #434b4d 100%);
-    background-image: linear-gradient(to bottombottom, #6e7577 0, #434b4d 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6e7577', endColorstr='#434b4d',GradientType=0 ); }
+    background-image: -moz-linear-gradient(top, #6e7577 0, #3f4748 100%);
+    background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #6e7577), color-stop(100%, #3f4748));
+    background-image: -webkit-linear-gradient(top, #6e7577 0, #3f4748 100%);
+    background-image: -o-linear-gradient(top, #6e7577 0, #3f4748 100%);
+    background-image: -ms-linear-gradient(top, #6e7577 0, #3f4748 100%);
+    background-image: linear-gradient(to bottombottom, #6e7577 0, #3f4748 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6e7577', endColorstr='#3f4748',GradientType=0 ); }
   button:active,
   .button:active {
-    background: #3b4244; }
+    background: #383e40; }
   button + button,
   .button + button {
     margin-left: 5px; }
@@ -613,7 +627,7 @@ button,
       color: #70aab5; }
     button.button--link:hover,
     .button.button--link:hover {
-      color: #38555b; }
+      color: #4e777f; }
   button.button--tag,
   .button.button--tag {
     background: #d4e6e9;
@@ -695,7 +709,7 @@ h5 {
     position: absolute;
     left: -99999px; }
     .tab input:checked + label {
-      color: #434b4d;
+      color: #3f4748;
       background: white;
       text-shadow: none; }
   .tab:hover label {
@@ -967,6 +981,8 @@ h5 {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis; }
+  .designer__list .designer__list-item:hover {
+    background: #f8f8f8; }
   .designer__list .designer__list-item.setting--active .setting__icon:after {
     font-family: "Ionicons";
     content: "\f375";
